--- a/nomicly/wp-content/themes/nomicly/style.css
+++ b/nomicly/wp-content/themes/nomicly/style.css
@@ -212,6 +212,7 @@ p.cat-links {
 	background: #eee;
 	padding: 10px;
 	border:1px solid #ccc;
+	margin-bottom:10px;
 }
 .idea-stats p {
 	margin-bottom: 0;
@@ -1000,6 +1001,11 @@ a:hover {
 	line-height:1.1em;
 	padding-top:0;
 	padding-bottom:15px;
+}
+.pub-date {
+	float:right;
+	font-size:12px;
+	color:#666;
 }
 .user_feed .user-hd {
 	font-size:26px;
