fix to dates on posts, swtiched to the_time()

--- a/nomicly/wp-content/themes/nomicly/style.css
+++ b/nomicly/wp-content/themes/nomicly/style.css
@@ -213,6 +213,7 @@ p.cat-links {
 	padding: 10px;
 	border:1px solid #ccc;
 	margin-bottom:10px;
+	float:left;
 }
 .idea-stats p {
 	margin-bottom: 0;
