--- a/nomicly/wp-content/themes/nomicly/style.css
+++ b/nomicly/wp-content/themes/nomicly/style.css
@@ -84,7 +84,8 @@ footer, header, hgroup, menu, nav, section {
 	text-align:center;
 }
 
-.home #infscr-loading  {
+.home #infscr-loading,
+.search #infscr-loading {
 	background:#fff;
 	border-radius:4px;
 	padding: 15px 0;
@@ -176,7 +177,8 @@ body {
 	margin: 5px 0 15px 0;
 }
 .widget.topic-list ul {
-	padding: 5px 0;
+	margin-top:0;
+	padding-top:0;
 }
 .widget.topic-list {
 	padding: 0;
@@ -284,6 +286,13 @@ p.cat-links {
     position: relative;
     top: -5px;
 }
+/* search page styles */
+.search .widget .entry-title {
+	padding: 0;
+}
+.search .not-found {
+	padding:15px;
+}
 /* end nomicly widgets */
 /*nomicly structures */
 
@@ -384,6 +393,10 @@ p.cat-links {
 	padding: 2%;
 	box-shadow: 0 0 2px #000;
 	border-radius:4px; */
+}
+.left-sidebar .plain-page#content {
+	margin: 0 2.6% 3%;
+    width: 94.8%;
 }
 .left-sidebar #secondary, .left-sidebar .secondary {
 	float: left;
@@ -971,10 +984,13 @@ a:hover {
 #compare-ideas-form article {
 	margin: 0 0 1.625em;
 }
-.the_feed .hentry, #compare-ideas-form article {
+.the_feed .hentry, #compare-ideas-form article, .plain-page .page {
 	padding: 2%;
 	background:#fff;
 	border-radius:4px;
+}
+.plain-page .page {
+	padding: 2% 6%;
 }
 .user_feed {
 	background:#fff;
@@ -1060,6 +1076,7 @@ a:hover {
 .the_feed .modify-link, .single-post .hentry .modify-link,
 .user_feed .modify-link {
 	float:right;
+	margin-bottom:6px;
 }
 .entry-meta {
 	color: #666;
@@ -1409,10 +1426,10 @@ article.format-status .entry-content {
 	border-bottom: none;
 	padding: 4.875em 0 0;
 	position: relative;
-} */
+} 
 .singular.page .hentry {
-	padding: 3.5em 0 0;
-}
+	padding: 0;
+}*/
 /*.singular .entry-title {
 	color: #000;
 	font-size: 36px;
@@ -2792,6 +2809,9 @@ p.comment-form-comment {
 	}
 	.singular.page .hentry {
 		padding: 1.625em 0 0;
+	}
+	.singular.page .plain-page .hentry {
+		padding: 2% 6%;
 	}
 	/* Talking avatars take up too much room at this size */
 	.commentlist > li.comment,
