--- a/nomicly/wp-content/themes/nomicly/style.css
+++ b/nomicly/wp-content/themes/nomicly/style.css
@@ -67,6 +67,13 @@ footer, header, hgroup, menu, nav, section {
 
 /* utility */
 /* ====== media ====== */
+.alpha {
+	font-weight:normal;
+	font-size:10px;
+	font-style:italic;
+	padding-left: 5px;
+	color:pink;
+}
 .media {margin:10px 10px 10px 0; padding-bottom:10px;}
 .media, .bd {overflow:hidden; _overflow:visible; zoom:1;}
 .media .img {float:left; margin-right: 10px;}
